; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_pack_array.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_pack_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.bson*, i32, i64)* @pack_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pack_array(i32* %0, %struct.bson* %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.bson*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca [32 x i8], align 16
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.bson* %1, %struct.bson** %6, align 8
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  %14 = load %struct.bson*, %struct.bson** %6, align 8
  %15 = call i32 @reserve_length(%struct.bson* %14)
  store i32 %15, i32* %9, align 4
  store i64 1, i64* %10, align 8
  br label %16

16:                                               ; preds = %37, %4
  %17 = load i64, i64* %10, align 8
  %18 = load i64, i64* %8, align 8
  %19 = icmp ule i64 %17, %18
  br i1 %19, label %20, label %40

20:                                               ; preds = %16
  %21 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %22 = load i64, i64* %10, align 8
  %23 = sub i64 %22, 1
  %24 = call i64 @bson_numstr(i8* %21, i64 %23)
  store i64 %24, i64* %12, align 8
  %25 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  store i8* %25, i8** %13, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = load i64, i64* %10, align 8
  %28 = call i32 @lua_geti(i32* %26, i32 -1, i64 %27)
  %29 = load %struct.bson*, %struct.bson** %6, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i8*, i8** %13, align 8
  %32 = load i64, i64* %12, align 8
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @append_one(%struct.bson* %29, i32* %30, i8* %31, i64 %32, i32 %33)
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @lua_pop(i32* %35, i32 1)
  br label %37

37:                                               ; preds = %20
  %38 = load i64, i64* %10, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %10, align 8
  br label %16

40:                                               ; preds = %16
  %41 = load %struct.bson*, %struct.bson** %6, align 8
  %42 = call i32 @write_byte(%struct.bson* %41, i32 0)
  %43 = load %struct.bson*, %struct.bson** %6, align 8
  %44 = load %struct.bson*, %struct.bson** %6, align 8
  %45 = getelementptr inbounds %struct.bson, %struct.bson* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load i32, i32* %9, align 4
  %48 = sext i32 %47 to i64
  %49 = sub nsw i64 %46, %48
  %50 = load i32, i32* %9, align 4
  %51 = call i32 @write_length(%struct.bson* %43, i64 %49, i32 %50)
  ret void
}

declare dso_local i32 @reserve_length(%struct.bson*) #1

declare dso_local i64 @bson_numstr(i8*, i64) #1

declare dso_local i32 @lua_geti(i32*, i32, i64) #1

declare dso_local i32 @append_one(%struct.bson*, i32*, i8*, i64, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @write_byte(%struct.bson*, i32) #1

declare dso_local i32 @write_length(%struct.bson*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
